--- a/pom.xml
+++ b/pom.xml
@@ -107,7 +107,11 @@
             <artifactId>jjwt</artifactId>
             <version>0.9.1</version>
         </dependency>
-        
+        <dependency>
+    <groupId>com.fasterxml.jackson.dataformat</groupId>
+    <artifactId>jackson-dataformat-xml</artifactId>
+    <version>2.10.2</version>
+</dependency>
 	</dependencies>
 
 	<build>
