--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,6 +15,7 @@ jtw.app.jwtExpirationMs=3600000
 jtw.app.jwtRefreshExpirationMs= 86400000
 #jtw.app.timeVerifycode=60000
 jtw.app.timeVerifycode=3600000
+management.security.enabled=false
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
