--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,6 +28,7 @@ spring.mail.properties.mail.smtp.auth=true
 # TLS , port 587
 spring.mail.properties.mail.smtp.starttls.enable=true
 security.basic.enable: false
+server.error.include-binding-errors=always
 # SSL, post 465
 #spring.mail.properties.mail.smtp.socketFactory.port = 465
 #spring.mail.properties.mail.smtp.socketFactory.class = javax.net.ssl.SSLSocketFactory
