--- a/pom.xml
+++ b/pom.xml
@@ -112,6 +112,11 @@
     <artifactId>jackson-dataformat-xml</artifactId>
     <version>2.10.2</version>
 </dependency>
+<dependency>
+  <groupId>org.apache.httpcomponents</groupId>
+  <artifactId>httpclient</artifactId>
+  <scope>test</scope>
+</dependency>
 <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
 <dependency>
     <groupId>com.fasterxml.jackson.core</groupId>
