--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,8 +20,9 @@ spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=damvannanh@gmail.com
 spring.mail.password=klnfagtjpcrhudbg
+mail.smtp.auth=true
 # Other properties
-spring.mail.properties.mail.smtp.auth=true
+#spring.mail.properties.mail.smtp.auth=true
 #spring.mail.properties.mail.smstp.connectiontimeout=5000
 #spring.mail.properties.mail.smtp.timeout=5000
 #spring.mail.properties.mail.smtp.writetimeout=5000
